--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../vista/css/styles.css">
+    <link rel="stylesheet" href="vista/css/styles.css">
     <title>SembrandoCom/home</title>
 </head>
 <body>
     <header>
         <nav>
             <div id="logo-nav">
-                <img src="../vista/img/fondosLogos/SembrandoCom3.png" style="height: 150px; width: auto;" alt="logoFamilyRoots">
+                <img src="vista/img/fondosLogos/SembrandoCom3.png" style="height: 150px; width: auto;" alt="logoFamilyRoots">
             </div>
         </nav>
     </header>
@@ -34,6 +34,6 @@
     <footer>
         <p>© 2024 FamilyRoots. Todos los derechos reservados.</p>
     </footer>
-    <script src="js/login.js"></script>
+    <script src="vista/js/login.js"></script>
 </body>
 </html>
