--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="vista/css/styles lucia.css">
+    <link rel="stylesheet" href="vista/css/styles_oscar.css">
     <title>SembrandoCom/home</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
                     <hr class="hr-login"  style ="color:black;border-top:1px solid #000000">
                 </div>
                 <p class="login-footer" style="height: 150px; width: auto;color:black" >¿Ya tienes una cuenta?
-                    <a class="link-sub" rel="stylesheet" href="login.html" style="color:black"> Inicia Sesión</a>
+                    <a class="link-sub" rel="stylesheet" href="vista/login.html" style="color:black"> Inicia Sesión</a>
                 </p>
             </div>
         </div>
